--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,13 @@
 /* Variables */
 :root {
-  --main-text-yellow-color : #FCB72B;
-  --main-darkNavy-color : #495567;
-  --main-dimGrey-color : #939CAA;
-  --main-lightGrey-color : #E5ECF4;;
-  --main-snow-color : #F2F5F9;;
-  --main-lgihtYellow-color : #FFF4DF;
+  --main-text-yellow-color: #FCB72B;
+  --main-darkNavy-color: #495567;
+  --main-dimGrey-color: #939CAA;
+  --main-lightGrey-color: #E5ECF4;
+  ;
+  --main-snow-color: #F2F5F9;
+  ;
+  --main-lgihtYellow-color: #FFF4DF;
 }
 
 
@@ -47,13 +49,13 @@ img {
   height: auto;
 }
 
-ul{
+ul {
   margin: 0;
   padding: 0;
   list-style: none;
 }
 
-a{
+a {
   display: inline-block;
   text-decoration: none;
 }
@@ -64,6 +66,7 @@ body {
   height: 100%;
   margin: 0;
   padding: 0;
+  overflow-x: hidden;
 }
 
 .visually-hidden {
@@ -90,3 +93,327 @@ body {
 .site-main {
   flex-grow: 1;
 }
+
+/* Start Header Section */
+#site-header {
+  padding: 22px 0;
+}
+
+.header-part {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav {
+  margin: 0 auto 0 58px;
+}
+
+.site-nav__list {
+  display: flex;
+  align-items: center;
+}
+
+.site-nav__item:not(:last-child) {
+  margin-right: 32px;
+}
+
+.site-nav__link {
+  font-family: 'Space Mono';
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--main-dimGrey-color);
+  transition: all .5s;
+}
+
+.site-nav__link:hover {
+  color: var(--main-text-yellow-color);
+}
+
+.site-links {
+  padding: 14px 39px;
+  font-family: 'Space Mono';
+  font-weight: 700;
+  font-size: 15px;
+  line-height: 25px;
+  color: #FFFFFF;
+  background-color: var(--main-text-yellow-color);
+  border: 3px solid transparent;
+  transition: all .5s;
+}
+
+.site-links:hover {
+  color: var(--main-text-yellow-color);
+  border: 3px solid var(--main-text-yellow-color);
+  background-color: transparent;
+}
+
+/* End of Header Section */
+
+/* Start Main Page Hero Section */
+#hero {
+  position: relative;
+  padding: 152px 0;
+  background-image: url('../images/main-hero-bg-img.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: center;
+}
+
+#hero::after {
+  position: absolute;
+  bottom: 170px;
+  right: -50px;
+  width: 234px;
+  height: 63px;
+  background-image: url('../images/three-round-bg-img.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: '';
+}
+
+.hero-part {
+  width: 500px;
+}
+
+.hero-part__title {
+  margin: 0;
+  font-family: 'Space Mono';
+  font-weight: 700;
+  font-size: 56px;
+  line-height: 56px;
+  letter-spacing: -2.5px;
+  color: #FFFFFF;
+}
+
+.hero-part__text {
+  position: relative;
+  margin: 40px 0px 40px 95px;
+  font-family: 'Lexend Deca';
+  font-size: 15px;
+  line-height: 25px;
+  color: #FFFFFF;
+}
+
+.hero-part__text::before {
+  position: absolute;
+  top: 45%;
+  left: -299px;
+  width: 234px;
+  height: 15px;
+  background-color: var(--main-text-yellow-color);
+  content: '';
+}
+
+.hero-part__text::after {
+  position: absolute;
+  top: 42px;
+  right: -540px;
+  width: 506px;
+  height: 158px;
+  background-image: url('../images/arrow-right.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: '';
+}
+
+.hero-part__link {
+  margin-left: 95px;
+}
+
+/* End of Main Page Hero Section */
+
+/* Start Plan Section */
+#plan {
+  padding: 160px 0 147px 0;
+}
+
+.plan-part__list {
+  position: relative;
+  display: flex;
+  align-items: center;
+}
+
+.plan-part__list::before {
+  content: '';
+  position: absolute;
+  top: 40px;
+  left: -205px;
+  background-image: url('../images/light-grey-line.svg');
+  background-size: contain;
+  width: 974px;
+  height: 20px;
+}
+
+.plan-part__item {
+  width: 350px;
+  margin-right: 30px;
+  z-index: 2;
+}
+
+.plan-part__item:last-child {
+  margin-right: 0;
+}
+
+.plan-part__item::before {
+  display: block;
+  width: 96px;
+  height: 96px;
+  background-image: url('../images/app-img.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  content: '';
+}
+
+.plan-part__item:nth-child(2)::before {
+  background-image: url('../images/scooter-img.svg');
+}
+
+.plan-part__item:nth-child(3)::before {
+  background-image: url('../images/ride-img.svg');
+}
+
+.plan-part__item-title {
+  margin: 40px 0 27px 0;
+  font-family: 'Space Mono';
+  font-weight: 700;
+  font-size: 24px;
+  line-height: 28px;
+  letter-spacing: -1.07143px;
+  color: var(--main-darkNavy-color);
+}
+
+.plan-part__item-text {
+  margin: 0;
+  font-family: 'Lexend Deca';
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--main-dimGrey-color);
+}
+
+/* End of Plan Section */
+
+/* Start Info Section */
+#info {
+  padding: 0 0 178px 0;
+}
+
+.easy-list__item {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+
+.easy-list__item:nth-child(even) {
+  flex-direction: row-reverse;
+}
+
+.easy-list__item:nth-child(1)::before {
+  position: absolute;
+  right: -205px;
+  bottom: -5px;
+  z-index: 5;
+  width: 735px;
+  height: 138px;
+  background-image: url('../images/easy-line.svg');
+  background-size: 735px 138px;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:nth-child(1)::after {
+  position: absolute;
+  right: -510px;
+  bottom: 0px;
+  width: 395px;
+  height: 395px;
+  background-image: url('../images/section-round-img.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:nth-child(2)::before {
+  position: absolute;
+  left: -500px;
+  bottom: 0px;
+  width: 395px;
+  height: 395px;
+  background-image: url('../images/section-round-img.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:nth-child(2)::after {
+  position: absolute;
+  top: 157px;
+  left: -244px;
+  z-index: 5;
+  width: 735px;
+  height: 138px;
+  background-image: url('../images/arrow-right.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:nth-child(3)::before {
+  position: absolute;
+  top: 225px;
+  right: -555px;
+  z-index: 5;
+  width: 735px;
+  height: 138px;
+  background-image: url('../images/arrow-left.svg');
+  background-size: 735px 138px;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:nth-child(3)::after {
+  position: absolute;
+  right: -510px;
+  bottom: 0px;
+  width: 395px;
+  height: 395px;
+  background-image: url('../images/section-round-img.svg');
+  background-size: contain;
+  background-repeat: no-repeat;
+  content: '';
+}
+
+.easy-list__item:not(:first-child) {
+  padding-top: 160px;
+}
+
+.easy-list__text-box {
+  width: 445px;
+}
+
+.easy-list__title {
+  margin: 0;
+  font-family: 'Space Mono';
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 48px;
+  letter-spacing: -2.14286px;
+  color: var(--main-darkNavy-color)
+}
+
+.easy-list__text {
+  margin: 24px 0 40px 0;
+  font-family: 'Lexend Deca';
+  font-size: 15px;
+  line-height: 25px;
+  color: var(--main-dimGrey-color);
+}
+
+.easy-list__img {
+  width: 395px;
+  height: 395px;
+  border-radius: 50%;
+}
+
+/* End of Info Section */
