--- a/css/main.css
+++ b/css/main.css
@@ -1,11 +1,18 @@
 /* Variables */
 :root {
-  --main-text-yellow-color: #FCB72B;
+  /* --main-text-yellow-color: #FCB72B;
   --main-darkNavy-color: #495567;
   --main-dimGrey-color: #939CAA;
   --main-lightGrey-color: #E5ECF4;
   --main-snow-color: #F2F5F9;
-  --main-lgihtYellow-color: #FFF4DF;
+  --main-lgihtYellow-color: #FFF4DF; */
+  --main-white-color: #ffffff;
+  --main-text-yellow-color : #FCB72B;
+  --main-darkNavy-color : #495567;
+  --main-dimGrey-color : #939CAA;
+  --main-lightGrey-color : #E5ECF4;;
+  --main-snow-color : #F2F5F9;;
+  --main-lgihtYellow-color : #FFF4DF;
 }
 
 
@@ -419,6 +426,18 @@ body {
 
 
 
+
+
+
+
+
+
+
+
+
+
+
+
 .hero{
   position: relative;
   padding: 62px 0;
@@ -432,7 +451,7 @@ body {
   background-image: url("../images/careers-bg.jpg");
 }
 
-.hero::after{
+/* .hero::after{
   position: absolute;
   content: "";
   top: 40%;
@@ -444,7 +463,7 @@ body {
   border: 3px solid var(--main-white-color);
   border-color: var(--main-white-color);
   cursor: pointer;
-}
+} */
 
 .hero::before{
   position: absolute;
@@ -757,6 +776,7 @@ body {
 
 .article{
   padding: 70px 0;
+  margin-top: 160px;
   background-image: url("../images/article-bg.jpg");
   background-repeat: no-repeat;
   background-position: center;
