--- a/css/main.css
+++ b/css/main.css
@@ -149,7 +149,7 @@ body {
 /* End of Header Section */
 
 /* Start Main Page Hero Section */
-#hero {
+.hero {
   position: relative;
   padding: 152px 0;
   background-image: url('../images/main-hero-bg-img.jpg');
@@ -158,7 +158,7 @@ body {
   background-position: center;
 }
 
-#hero::after {
+.hero::after {
   position: absolute;
   bottom: 170px;
   right: -50px;
