White color qowildi

--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,6 @@
 /* Variables */
 :root {
+  --main-white-color: #ffffff;
     --main-text-yellow-color: #FCB72B;
     --main-darkNavy-color: #495567;
     --main-dimGrey-color: #939CAA;
